seperated approaches from excercises. moved sample solutions. fixed comment rendering.
- introduced getExcerciseObject-Service Method
- added a couple of comments with fixmes and explanations
- adapted interface to run on changed edge: "tub.eduzen.lecture_content"
- fixed a click handler broken in firefox
- moved rendering of sample solutions into excercise-text view

to be completed:
- comments should be authored by tub.eduzen.identity, instead of usernames
- render file attachments for approaches

--- a/src/main/resources/web/style/styles.css
+++ b/src/main/resources/web/style/styles.css
@@ -40,6 +40,9 @@
     line-height: 1.6em;
 }
 
+.eduzen .title {
+    margin-right: 40px;
+}
 
 .eduzen .topicalareaname {
     text-decoration: none;
@@ -47,6 +50,11 @@
     color: #000;
     padding: 4px;
     margin: 4px;
+}
+
+.eduzen .topicalareaname:active {
+    background-color: #99cc00;
+    color: #fff;
 }
 
 .eduzen .back,
@@ -150,6 +158,7 @@ li.approach {
 
 /** Listing / List Item Options **/
 
+.eduzen .approach-list,
 .eduzen #taken-excercises,
 .eduzen #all-excercises {
     padding-left: 0px;
